fix: theming and move recipe gen to its own component

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,21 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-    --foreground-rgb: ;
-    --background-rgb: 214, 219, 220;
-}
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --foreground-rgb: 255, 255, 255;
-        --background-rgb: 0, 0, 0;
-    }
-}
-
 body {
-    color: rgb(var(--foreground-rgb));
-    background: rgb(var(--background-rgb));
+    color: #000000;
+    background: #CFD9CF;
 }
 
 @layer utilities {
